e2e/test/lb-hostname-only-ingress/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: lb-hostname-only-ingress
  labels:
    all:
    lke:
spec:
  namespace: "lb-hostname-only-ingress"
  catch:
    - script:
        shell: bash
        shellArgs:
          - -c
        content: |
          set -euo pipefail
          echo "Test failed. Fetching CCM logs..."
          kubectl logs -n kube-system daemonsets/ccm-linode | grep "lb-hostname-only-ingress" | tail -100
  steps:
    - name: Create pods and services
      try:
        - apply:
            file: create-pods-services.yaml
      catch:
        - describe:
            apiVersion: v1
            kind: Pod
        - describe:
            apiVersion: v1
            kind: Service
    - name: Check that svc-test-1 loadbalancer ingress contains only hostname
      try:
      - assert:
          resource:
            apiVersion: v1
            kind: Service
            metadata:
              name: svc-test-1
            status:
              (loadBalancer.ingress[0].ip != null): false
              (loadBalancer.ingress[0].hostname != null): true
    - name: Check that svc-test-2 loadbalancer ingress contains ip
      try:
      - assert:
          resource:
            apiVersion: v1
            kind: Service
            metadata:
              name: svc-test-2
            status:
              (loadBalancer.ingress[0].ip != null): true
              (loadBalancer.ingress[0].hostname != null): true
    - name: Annotate service
      try:
        - script:
            shell: bash
            shellArgs:
              - -c
            content: |
              set -euo pipefail
              kubectl annotate svc svc-test-2 -n $NAMESPACE service.beta.kubernetes.io/linode-loadbalancer-hostname-only-ingress=true
            check:
              ($error == null): true
    - name: Check and make sure svc-test-2 ingress only contains hostname
      try:
      - assert:
          resource:
            apiVersion: v1
            kind: Service
            metadata:
              name: svc-test-2
            status:
              (loadBalancer.ingress[0].ip != null): false
              (loadBalancer.ingress[0].hostname != null): true
